<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DonetskGuide</string>
    <string name="exit">Exit</string>
    <string name="places">Places</string>
    <string name="map">Map</string>
    <string name="routes">Routes</string>
    <string name="settings">Settings</string>
    <string name="AutoCompleteSearch">AutoCompleteTextView</string>
    <string name="search">Search</string>
    <string name="returntoprev">Return</string>
	<string name="instructions">Instructions</string>
	<string name="PlaceStationShowMap">Show Map</string>
	<string name="show">Show on the map</string>
	<string name="routeInfo">Route Info</string>
	<string name="showimg">Show Image</string>
	<string name="coordinates">Get Coordinates</string>
	<string name="placeInfo">Place Info</string>
	<string name="SearchRouteText">Search Route</string>
	<string name="choose_points">Choose points</string>
	<string name="map_point_one">Map point #1</string>
	<string name="map_point_2">Map point #2</string>
	<string name="enhanced_search_q">Do you want to use enhanced search?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="fill_in_fields">Fill in all the fields and press button below</string>
	<string name="loading">loading...</string>
	<string name="wait">Please wait</string>
	<string name="sport">Server Port:</string>
	<string name="shost">Server Host:</string>
	<string name="savesettings">Save</string>
	<string name="checkconnection">Check connection</string>
	<string name="close">Close</string>
</resources>